# flood-prediction

./: .cache.sqlite  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  flood_prediction_api.py  fly.toml  grpc_server.py  pyproject.toml  requirements.txt
.github/workflows/: CD.yml  CI.yml
configs/: configs.yaml
data/reference_data/: reference.csv
data/testing_data/: test.csv
data/training_data/: train.csv
mlruns/0/: meta.yaml
mlruns/409756928123456811/: meta.yaml
mlruns/409756928123456811/01f4ca86ec3c439280cc147069ecf722/: meta.yaml
mlruns/409756928123456811/02bdfbf8a5124a4db924776804d7fa2e/: meta.yaml
mlruns/409756928123456811/0c31d868097346c39781b3a86b2f77b7/: meta.yaml
mlruns/409756928123456811/0e7e1d3bb3d84d9da207611a5486bc92/: meta.yaml
mlruns/409756928123456811/0fe8260320b44725aaec27c5ca772fe6/: meta.yaml
mlruns/409756928123456811/146bb45d23f6405c823c68d8411e03d0/: meta.yaml
mlruns/409756928123456811/149e354f922f4c49a6b1a8d6a96071ce/: meta.yaml
mlruns/409756928123456811/164fac809a204b5da7fb574eae6d0c3d/: meta.yaml
mlruns/409756928123456811/18202e0dfe55456db9d531357180318c/: meta.yaml
mlruns/409756928123456811/18c094d7bc4b4085b0d7cfc61c8b7820/: meta.yaml
mlruns/409756928123456811/1ad5ba8d7aee4121b8da556abbafddea/: meta.yaml
mlruns/409756928123456811/1be6c3c1e54a4c2e8247b14318c5c2b9/: meta.yaml
mlruns/409756928123456811/1e50d4b30a2f4367a9856a5ed59685a9/: meta.yaml
mlruns/409756928123456811/322dde15d1ce413cab1be08be6de7f85/: meta.yaml
mlruns/409756928123456811/330e8cef51df470893483b9b27f29cff/: meta.yaml
mlruns/409756928123456811/3a0033be77da46cc94f673f2d47bf476/: meta.yaml
models/: learner.pkl  metadata.json
models/ag-20240515_132315/: learner.pkl  metadata.json
models/best_model/: __version__  learner.pkl  metadata.json
models/models/: NeuralNetFastAImodel-internals.pkl  trainer.pkl
notebooks/: 00_data_collection.ipynb  01_data_processing.ipynb  03_feature_engineering.ipynb  04_modelling.ipynb
protos/: flood_prediction.proto  flood_prediction_pb2.py  flood_prediction_pb2_grpc.py
src/: build_features.py  cleaning.py  full_pipeline.py  full_pipeline_dag.py  ingestion.py  monitoring.py  train.py  utils.py
src/data/: build_features.py  cleaning.py  ingestion.py
src/models/: train.py
tests/: performance_test.py  test_build_features.py  test_client.py  test_data_ingestion.py  test_data_transformation.py  test_train.py
(+522 files in other folders)
