[tool.poetry]
name = "flood-prediction"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pandas = "^2.2.2"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
jupyter = "^1.0.0"
pyyaml = "^6.0.1"
folium = "^0.16.0"
scikit-learn = ">=1.3.0,<1.4.1"
autogluon = "^1.1.0"
pykrige = "^1.7.1"
geopandas = "^0.14.4"
shapely = "^2.0.4"
pyshp = "^2.3.1"
openmeteo-requests = "^1.2.0"
requests-cache = "^1.2.0"
retry-requests = "^2.0.0"
mlflow = "^2.12.2"
optuna = "^3.6.1"
fastapi = "^0.111.0"
pytest = "^8.2.1"
apache-airflow = "^2.9.1"
pre-commit = "^3.7.1"
anyio = "^4.3.0"
redis = "^5.0.4"
aiohttp-retry = "^2.8.3"
flask-limiter = "^3.7.0"
slowapi = "^0.1.9"
pytest-asyncio = "^0.23.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
